--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.1.0",
+    "@astrojs/tailwind": "^3.1.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "astro": "^2.0.18",
+    "astro": "^2.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "tailwindcss": "^3.2.7"
   }
 }
